feat: add SerialGC with xmx4g, xms4g